# couch

./: .gitignore  CLAUDE.md  LICENSE  README.md  unity-test.sh
.agents/: code-cartographer.md  technical-writer.md
.claude/: settings.json
.claude/agents/: sofa.md  unity-dev.md  unity-integration.md
.claude/hooks/: git-commit-check.sh  session-start.sh  session-stop.sh
docs/: 04-specialized-agents.md  05-user-needs.md  06-software-architecture.md  07-software-requirements.md  08-component-designs.md  09-tdd-implementation-plan.md  10-custom-integration-plan.md  11-agent-review-negotiation.md  12-unified-implementation-plan.md  20260212-vertical-spike-implementation-plan.md
docs/adr/: 0001-centroid-based-resection.md  0002-dual-representation-cutting.md  0003-undo-via-scene-rebuild.md
docs/dev/: adr-index.md  api-reference-c.md  documentation-manifest.md  native-boundary.md  onboarding.md  sofa-patterns.md  testing.md
docs/research/: 01-clinical-tar-research.md  02-unity6-research.md  03-sofa-framework-research.md  stl-mesh-sources.md
scripts/: download_foot_meshes.sh
spike/spike1_python/: ankle_scene.py  conftest.py  test_ankle_scene.py
spike/spike2_native/: CMakeLists.txt  CMakePresets.json
spike/spike2_native/csharp/: NativeStructs.cs  SofaBridgeComponent.cs  SofaBridgeException.cs  SofaNativeBridge.cs  SofaSimulation.cs
spike/spike2_native/include/: sofa_ankle_bridge.h
spike/spike2_native/scripts/: collect_sofa_deps.sh  collect_sofa_deps_win.ps1  deploy_to_unity.sh
spike/spike2_native/src/: ankle_scene.cpp  ankle_scene.h  scene_builder.cpp  scene_builder.h  sofa_ankle_bridge.cpp  sofa_compat.h  thread_manager.cpp  thread_manager.h  triple_buffer.h
spike/spike2_native/test/: test_ankle_scene.cpp  test_async.cpp  test_bridge.cpp  test_joint_angles.cpp  test_resection.cpp  test_rom_validation.cpp  test_scene_builder.cpp  test_triple_buffer.cpp
unity-project/: .gitignore
unity-project/Assets/: UniversalRenderPipelineGlobalSettings.asset
unity-project/Assets/AnkleSim/Bridge/: AnkleSim.Bridge.asmdef  NativeStructs.cs  SofaBridgeComponent.cs  SofaBridgeException.cs  SofaNativeBridge.cs  SofaSimulation.cs
unity-project/Assets/AnkleSim/Bridge/ROM/: ROMEngine.cs
unity-project/Assets/AnkleSim/Bridge/Resection/: ResectionEngine.cs
unity-project/Assets/AnkleSim/Core/: AnkleSim.Core.asmdef
unity-project/Assets/AnkleSim/Core/DataModels/: AlignmentMetrics.cs  AlignmentWarning.cs  BoneType.cs  CoverageAnalysis.cs  LigamentConfig.cs  ROMComparison.cs  ROMRecord.cs  ResectionRecord.cs
unity-project/Assets/AnkleSim/Core/Math/: AngleMath.cs
unity-project/Assets/AnkleSim/Core/ROM/: ROMSweepConfig.cs
unity-project/Assets/AnkleSim/Core/Resection/: CutPlaneController.cs
unity-project/Assets/AnkleSim/Core/Validation/: AlignmentValidator.cs
unity-project/Assets/AnkleSim/Runtime/: AnkleSim.Runtime.asmdef
unity-project/Assets/AnkleSim/Runtime/Anatomy/: AnatomyConfig.cs  AnatomyManager.cs  BoneMaterialConfig.cs  BoneVisualizer.cs
unity-project/Assets/AnkleSim/Runtime/UI/: OrbitCamera.cs
unity-project/Assets/Tests/EditMode/: AnkleSim.Tests.EditMode.asmdef
unity-project/Assets/Tests/EditMode/DataModels/: AlignmentMetricsTests.cs  AnatomyConfigTests.cs  BoneMaterialTests.cs  BoneTypeTests.cs  CoverageAnalysisTests.cs  ROMComparisonTests.cs  ROMRecordTests.cs  ResectionRecordTests.cs
unity-project/Assets/Tests/EditMode/Math/: AngleMathTests.cs
unity-project/Assets/Tests/EditMode/Resection/: CutPlaneControllerTests.cs
unity-project/Assets/Tests/EditMode/Validation/: AlignmentValidatorTests.cs
unity-project/Assets/Tests/PlayMode/: AnkleSim.Tests.PlayMode.asmdef
unity-project/Assets/Tests/PlayMode/Anatomy/: AnatomyManagerTests.cs
unity-project/Assets/Tests/PlayMode/Bridge/: SceneBuilderIntegrationTests.cs
unity-project/Assets/Tests/PlayMode/ROM/: ROMEngineIntegrationTests.cs
unity-project/Assets/Tests/PlayMode/Resection/: ResectionIntegrationTests.cs
unity-project/Assets/Tests/PlayMode/Visualization/: BoneVisualizerTests.cs
unity-project/ProjectSettings/: GraphicsSettings.asset  ProjectSettings.asset
